# dataset-writer

./: .gitignore  config.py  converter.py  main.py  pyproject.toml  requirements.txt
src/: __init__.py  converter.py  generator.py  gui.py
training_data/: apt_analysis_20241107.jsonl  cve_scoring_20241107.jsonl  cyber_killchain_20241107.jsonl  malware_analysis_20241107.jsonl  mitre_attack_20241107.jsonl  security_basics_20241107.jsonl  threat_intelligence_20241107.jsonl  vulnerability_assessment_20241107.jsonl  zeroday_research_20241107.jsonl
